[package]
name = "overtrack-capture"
version = "0.1.0"
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
sysinfo = "0.15"

[dependencies.scrap]
version = "0.5"
git = "https://github.com/OtaK/scrap"
branch = "feature/deref-mut"

[dependencies.winapi]
version = "0.3"
default-features = false
features = ["winbase", "psapi", "processthreadsapi"]
